Populating "closing" argument to ridging

--- a/docs/zotero.bib
+++ b/docs/zotero.bib
@@ -31,6 +31,15 @@
 	journal = {J. Phys. Oceanography}
 }
 
+@techreport{Hunke2022,
+	url = {https://zenodo.org/records/7419438},
+	year = 2022,
+	title = {CICE-Consortium/Icepack: Icepack 1.3.3},
+	authors = {Elizabeth Hunke and Richard Allard and David A. Bailey and Philippe Blain and Anthony Craig and Frederic Dupont and
+                   Alice DuVivier and Robert Grumbine and David Hebert and Marika Holland and Nicole Jeffery and Jean-Francois Lemieux and
+		   Robert Osinski and Till Rasmussen and Mads Ribergaard and Lettie Roach and Andrew Roberts and Matthew Turner and Michael Winton}
+}
+
 @article{Hunke2001,
 	doi = {10.1006/jcph.2001.6710},
 	year = 2001,
